--- a/src/resources/main.qss
+++ b/src/resources/main.qss
@@ -93,19 +93,45 @@ QGroupBox::title {{
 }}
 
 QDockWidget {{
-    titlebar-close-icon: url(close.png);
-    titlebar-normal-icon: url(float.png);
     border: 1px solid {border};
+}}
+QDockWidget::close-button, QDockWidget::float-button {{
+    subcontrol-origin: padding;
+    subcontrol-position: top right;
+    background: transparent;
+    border: none;
+    width: 20px;
+    height: 20px;
+    opacity: 1; 
+}}
+
+QDockWidget::close-button {{
+    image: url(src/resources/close.svg);
+    right: 4px;
+    top: 2px;
+}}
+
+QDockWidget::float-button {{
+    image: url(src/resources/float.svg);
+    right: 28px;
+    top: 2px;
+}}
+
+QDockWidget::close-button:hover, QDockWidget::float-button:hover {{
+    background: {border};
+    border-radius: 3px;
 }}
 
 QDockWidget::title {{
     background: {surface};
     text-align: left;
     padding-left: 8px;
+    padding-right: 50px;
     border-bottom: 1px solid {border};
-    margin: 0px; /* Remove gap */
+    margin: 0px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
+    min-height: 24px;
 }}
 QLineEdit, QAbstractSpinBox, QTextEdit, QComboBox {{
     background-color: {surface};
