Fix scrollbar corner widget and splitter theming
- Added QAbstractScrollArea::corner styling in main.qss
- Added QGraphicsView::corner styling in main.qss
- Added programmatic corner widget to TimelineView with themed background
- Corner widget now updates on theme change

--- a/src/resources/main.qss
+++ b/src/resources/main.qss
@@ -275,6 +275,14 @@ QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal {{
     background: {scrollbar_bg};
 }}
 
+/* Corner widget where scrollbars meet */
+QAbstractScrollArea::corner {{
+    background: {scrollbar_bg};
+}}
+QGraphicsView::corner {{
+    background: {scrollbar_bg};
+}}
+
 /* Frames */
 QFrame#LoreFrame {{
     background-color: {surface};
